Add home page link to all pages

--- a/recipes/cranberry-sauce.html
+++ b/recipes/cranberry-sauce.html
@@ -46,6 +46,12 @@
         <img src="https://www.allrecipes.com/thmb/zKC8ojPvgKMQvGx8ITpbJYoYZs4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9111-cranberry-sauce-DDMFS-4x3-09d16e1a548145cea22d7d43f04c44d8.jpg" height="300" width="300">
     </ol>
 
+    <br>
+    
+    
+
+    <p><a href="../index.html">Home Page</a></p>
+
 </body>
 
 
