--- a/recipes/garlic-bread.html
+++ b/recipes/garlic-bread.html
@@ -36,8 +36,10 @@
     <li>Squeeze garlic cloves from their skins into a medium bowl. Stir in butter, Parmesan cheese, and parsley until well blended. Spread onto the cut sides of bread.</li>
     <br>
     <li>Broil bread until toasted, about 5 minutes.</li>
-
     </ol>
+
+    <br>
+    <p><a href="../index.html">Home Page</a></p>
 
 </body>
 
