--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
 
 <body>
     <h1>Ordin Recipes</h1>
-    <img src="https://www.allrecipes.com/thmb/6gvWZ4Tc8H9ZEbMsAD-1qWmhBo4=/2000x666/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/GOLDMAN_ALR_Holiday23_Classis_3485-3x1-58423a14313a49189fc23c3649f85d8b.jpg" height="500" width="900">
+    <img src="https://www.allrecipes.com/thmb/6gvWZ4Tc8H9ZEbMsAD-1qWmhBo4=/2000x666/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/GOLDMAN_ALR_Holiday23_Classis_3485-3x1-58423a14313a49189fc23c3649f85d8b.jpg" height="300" width="300">
     <h3>The best recipes on the internet</h3>
     <ul>
     <li><a href="recipes/lasagna.html">The Best Lasagna Recipe</a></li>
+    <br>
     <li><a href="recipes/garlic-bread.html">The To Die For Garlic Bread</a></li>
-    </ul>
+    <br>
+    <li><a href="recipes/cranberry-sauce.html">Cranberry Sauce of All Sauces</a></li>
+</ul>
+    <br>
+    <br>
+    <br>
+    <br>
 
+    <p><a href="index.html">Refresh</a></p>
 </body>
 
 
